@@ -1,5 +1,10 @@
 2002-08-09  Keith Seitz  <keiths@redhat.com>
 
+	* mi-main.c (mi_cmd_data_list_register_names): Add "-numbers"
+	option.
+
+2002-08-09  Keith Seitz  <keiths@redhat.com>
+
         * mi-interp.c (mi_event_handlers): Add context_changed event
         handler.
 	(mi_command_loop): Remove big block of code repeated in 
